--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
     
     <!-- Configuração (carrega credenciais) -->
     <script src="static/js/config.js?v=20251201"></script>
-    <script src="static/js/config.local.js?v=20251201"></script>
+    <script>
+        // Tentar carregar config.local.js (pode não existir)
+        (function() {
+            var script = document.createElement('script');
+            script.src = 'static/js/config.local.js?v=20251201';
+            script.onerror = function() {
+                console.warn('⚠️ config.local.js não encontrado. Configure suas credenciais.');
+            };
+            document.head.appendChild(script);
+        })();
+    </script>
     
     <!-- App Principal -->
     <script src="static/js/app.js?v=20251201"></script>
