Feature: Adicionar filtro por categoria e exportação PDF em relatórios

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <!-- Supabase Client -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
+    <!-- jsPDF para exportar relatórios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    
     <!-- Configuração (carrega credenciais) -->
     <script>
         // Configuração do Supabase
