fix: corrigir erro "supabase already declared"
- Adicionar scripts.js ao index.html (estava faltando)
- Evitar redeclaração de supabase usando window.supabaseClient
- Verificar se cliente já existe antes de criar novo

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     </script>
     <script src="static/js/config.js?v=20251210"></script>
     
+    <!-- Scripts auxiliares -->
+    <script src="static/js/scripts.js?v=20251210"></script>
+    
     <!-- App Principal -->
     <script src="static/js/app.js?v=20251210"></script>
     <script src="static/js/pwa-install.js?v=20251210"></script>
